--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.9.1'
     implementation group: 'com.fasterxml.jackson.core',
             name:'jackson-databind', version: '2.9.4'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
